force-app/main/default/objects/Clan__c/Clan__c.object-meta.xml
<CustomObject>
    <description>Clan object</description>
    <label>Clan</label>
    <nameField>
        <label>Clan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>