force-app/main/default/objects/Clan__c/fields/BadgeUrls__c.field-meta.xml
<CustomField>
    <fullName>BadgeUrls__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Badge Urls</label>
    <referenceTo>BadgeUrls__c</referenceTo>
    <relationshipLabel>Clans</relationshipLabel>
    <relationshipName>Clans</relationshipName>
    <type>Lookup</type>
</CustomField>