force-app/main/default/objects/Clan__c/fields/CapitalLeague__c.field-meta.xml
<CustomField>
    <fullName>CapitalLeague__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capital League</label>
    <referenceTo>Capital_League__c</referenceTo>
    <relationshipLabel>Clans</relationshipLabel>
    <relationshipName>Clans</relationshipName>
    <type>Lookup</type>
</CustomField>