force-app/main/default/objects/Clan__c/fields/ChatLanguage__c.field-meta.xml
<CustomField>
    <fullName>ChatLanguage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chat Language</label>
    <referenceTo>ChatLanguage__c</referenceTo>
    <relationshipLabel>Clans</relationshipLabel>
    <relationshipName>Clans</relationshipName>
    <type>Lookup</type>
</CustomField>