force-app/main/default/objects/Clan__c/fields/ClanCapitalPoints__c.field-meta.xml
<CustomField>
    <fullName>ClanCapitalPoints__c</fullName>
    <label>Clan Capital Points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>