force-app/main/default/objects/Clan__c/fields/ClanLevel__c.field-meta.xml
<CustomField>
    <fullName>ClanLevel__c</fullName>
    <label>Clan Level</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>