force-app/main/default/objects/Clan__c/fields/ClanPoints__c.field-meta.xml
<CustomField>
    <fullName>ClanPoints__c</fullName>
    <label>Clan Points</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>