force-app/main/default/objects/Clan__c/fields/ClanVersusPoints__c.field-meta.xml
<CustomField>
    <fullName>ClanVersusPoints__c</fullName>
    <label>Clan Versus Points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>