force-app/main/default/objects/Clan__c/fields/IsFamilyFriendly__c.field-meta.xml
<CustomField>
    <fullName>IsFamilyFriendly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family Friendly?</label>
    <type>Checkbox</type>
</CustomField>