force-app/main/default/objects/Clan__c/fields/IsWarLogPublic__c.field-meta.xml
<CustomField>
    <fullName>IsWarLogPublic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>War Log Public?</label>
    <type>Checkbox</type>
</CustomField>