force-app/main/default/objects/Clan__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>ClanLocation__c</referenceTo>
    <relationshipLabel>Clans</relationshipLabel>
    <relationshipName>Clans</relationshipName>
    <type>Lookup</type>
</CustomField>