force-app/main/default/objects/Clan__c/fields/Members__c.field-meta.xml
<CustomField>
    <fullName>Members__c</fullName>
    <label>Members</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>