force-app/main/default/objects/Clan__c/fields/RequiredTownHallLevel__c.field-meta.xml
<CustomField>
    <fullName>RequiredTownHallLevel__c</fullName>
    <label>Required Town Hall Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>