force-app/main/default/objects/Clan__c/fields/RequiredTrophies__c.field-meta.xml
<CustomField>
    <fullName>RequiredTrophies__c</fullName>
    <label>Required Trophies</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>