force-app/main/default/objects/Clan__c/fields/RequiredVersusTrophies__c.field-meta.xml
<CustomField>
    <fullName>RequiredVersusTrophies__c</fullName>
    <label>Required Versus Trophies</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>