force-app/main/default/objects/Clan__c/fields/WarFrequency__c.field-meta.xml
<CustomField>
    <fullName>WarFrequency__c</fullName>
    <label>War Frequency</label>
    <length>30</length>
    <type>Text</type>
</CustomField>