force-app/main/default/objects/Clan__c/fields/WarLeague__c.field-meta.xml
<CustomField>
    <fullName>WarLeague__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>War League</label>
    <referenceTo>WarLeague__c</referenceTo>
    <relationshipLabel>Clans</relationshipLabel>
    <relationshipName>Clans</relationshipName>
    <type>Lookup</type>
</CustomField>