force-app/main/default/objects/Clan__c/fields/WarLosses__c.field-meta.xml
<CustomField>
    <fullName>WarLosses__c</fullName>
    <label>War Losses</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>