force-app/main/default/objects/Clan__c/fields/WarTies__c.field-meta.xml
<CustomField>
    <fullName>WarTies__c</fullName>
    <label>War Ties</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>