force-app/main/default/objects/Clan__c/fields/WarWins__c.field-meta.xml
<CustomField>
    <fullName>WarWins__c</fullName>
    <label>War Wins</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>