force-app/main/default/objects/Clan__c/fields/WarWinStreak__c.field-meta.xml
<CustomField>
    <fullName>WarWinStreak__c</fullName>
    <label>War Win Streak</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>